--- a/css/style.css
+++ b/css/style.css
@@ -778,7 +778,7 @@
 			#main > section.one
 			{
 				background-color: #7491ac;
-				background-image: url('../images/banner.jpg');
+				background-image: url('../images/bluegradient.jpg');
 			}
 
 			#main > section.two
